footer adaptiveness and animations

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <div class="section_title">8 причин начать работать с нами</div>
                 <div class="row">
                     <div
-                        class="col-sm-8 offset-sm-2 col-md-6 offset-md-0 advantages_item"
+                        class="col-sm-8 offset-sm-2 col-md-6 offset-md-0 advantages_item hidden"
                     >
                         <div class="advantages_item_img">
                             <img src="./img/adv/adv_img-1.png" alt="" />
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                     <div
-                        class="col-sm-8 offset-sm-2 col-md-6 offset-md-0 advantages_item"
+                        class="col-sm-8 offset-sm-2 col-md-6 offset-md-0 advantages_item hidden"
                     >
                         <div class="advantages_item_img">
                             <img src="img/adv/adv_img-2.png" alt="" />
@@ -158,7 +158,7 @@
                         </div>
                     </div>
                     <div
-                        class="col-sm-8 offset-sm-2 col-md-6 offset-md-0 advantages_item"
+                        class="col-sm-8 offset-sm-2 col-md-6 offset-md-0 advantages_item hidden"
                     >
                         <div class="advantages_item_img">
                             <img src="img/adv/adv_img-3.png" alt="" />
@@ -174,7 +174,7 @@
                         </div>
                     </div>
                     <div
-                        class="col-sm-8 offset-sm-2 col-md-6 offset-md-0 advantages_item"
+                        class="col-sm-8 offset-sm-2 col-md-6 offset-md-0 advantages_item hidden"
                     >
                         <div class="advantages_item_img">
                             <img src="img/adv/adv_img-4.png" alt="" />
@@ -190,7 +190,7 @@
                         </div>
                     </div>
                     <div
-                        class="col-sm-8 offset-sm-2 col-md-6 offset-md-0 advantages_item"
+                        class="col-sm-8 offset-sm-2 col-md-6 offset-md-0 advantages_item hidden"
                     >
                         <div class="advantages_item_img">
                             <img src="./img/adv/adv_img-5.png" alt="" />
@@ -207,7 +207,7 @@
                         </div>
                     </div>
                     <div
-                        class="col-sm-8 offset-sm-2 col-md-6 offset-md-0 advantages_item"
+                        class="col-sm-8 offset-sm-2 col-md-6 offset-md-0 advantages_item hidden"
                     >
                         <div class="advantages_item_img">
                             <img src="./img/adv/adv_img-6.png" alt="" />
@@ -224,7 +224,7 @@
                         </div>
                     </div>
                     <div
-                        class="col-sm-8 offset-sm-2 col-md-6 offset-md-0 advantages_item"
+                        class="col-sm-8 offset-sm-2 col-md-6 offset-md-0 advantages_item hidden"
                     >
                         <div class="advantages_item_img">
                             <img src="./img/adv/adv_img-7.png" alt="" />
@@ -240,7 +240,7 @@
                         </div>
                     </div>
                     <div
-                        class="col-sm-8 offset-sm-2 col-md-6 offset-md-0 advantages_item"
+                        class="col-sm-8 offset-sm-2 col-md-6 offset-md-0 advantages_item hidden"
                     >
                         <div class="advantages_item_img">
                             <img src="./img/adv/adv_img-8.png" alt="" />
@@ -267,7 +267,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-sm-6 col-md-4">
-                        <div class="func_item func_item-1">
+                        <div class="func_item func_item-1 hidden">
                             <div class="func_item_text">
                                 оформление заказа одним касанием
                             </div>
@@ -275,31 +275,31 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-md-4">
-                        <div class="func_item func_item-2">
+                        <div class="func_item func_item-2 hidden">
                             <div class="func_item_text">надежная подача</div>
                             <a href="#"> </a>
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-md-4">
-                        <div class="func_item func_item-3">
+                        <div class="func_item func_item-3 hidden">
                             <div class="func_item_text">прозрачные цены</div>
                             <a href="#"> </a>
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-md-4">
-                        <div class="func_item func_item-4">
+                        <div class="func_item func_item-4 hidden">
                             <div class="func_item_text">безналичная оплата</div>
                             <a href="#"> </a>
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-md-4">
-                        <div class="func_item func_item-5">
+                        <div class="func_item func_item-5 hidden">
                             <div class="func_item_text">обратная связь</div>
                             <a href="#"> </a>
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-md-4">
-                        <div class="func_item func_item-6">
+                        <div class="func_item func_item-6 hidden">
                             <div class="func_item_text">
                                 разделить <br />
                                 стоимость поездки
@@ -338,23 +338,27 @@
                     <div class="col-md-6 terms_blue">
                         УСЛОВИЯ: со своим авто:
                         <ul class="terms_blue_list">
-                            <li>Подключаем к системе UBER под 10%.</li>
-                            <li>Ни каких взносов 0%!</li>
-                            <li>
+                            <li class="hidden">
+                                Подключаем к системе UBER под 10%.
+                            </li>
+                            <li class="hidden">Ни каких взносов 0%!</li>
+                            <li class="hidden">
                                 Можем подключать удаленно без приезда в офис
                             </li>
-                            <li>ИП не требуется</li>
-                            <li>
+                            <li class="hidden">ИП не требуется</li>
+                            <li class="hidden">
                                 Заказы распределяются без учета рейтинга
                                 ближайшим водителям
                             </li>
-                            <li>Работа только по безналичному расчету</li>
-                            <li>
+                            <li class="hidden">
+                                Работа только по безналичному расчету
+                            </li>
+                            <li class="hidden">
                                 Деньги перечисляем на карту водителю или
                                 наличными в офисе
                             </li>
                         </ul>
-                        <span>
+                        <span class="hidden">
                             В день заработок составляет 7000-12000р + бонус
                             3000т рублей</span
                         >
@@ -362,9 +366,13 @@
                     <div class="col-md-6 terms_blue">
                         УСЛОВИЯ: на авто компании:
                         <ul class="terms_blue_list terms_blue_list-first">
-                            <li>Предоставляем авто без залога</li>
-                            <li>Без ежедневных выплат по аренде</li>
-                            <li>
+                            <li class="hidden">
+                                Предоставляем авто без залога
+                            </li>
+                            <li class="hidden">
+                                Без ежедневных выплат по аренде
+                            </li>
+                            <li class="hidden">
                                 Среда пятница и суббота работа на компанию
                                 остальные дни вы работаете на себя
                             </li>
@@ -373,14 +381,16 @@
                     <div class="col-md-6 terms_red terms_red-first">
                         ТРЕБОВАНИЕ:
                         <ul class="terms_red_list">
-                            <li>Наличие автомобиля без рекламы</li>
-                            <li>
+                            <li class="hidden">
+                                Наличие автомобиля без рекламы
+                            </li>
+                            <li class="hidden">
                                 Автомобиль не должен быть желтый и не с желтыми
                                 номерами
                             </li>
-                            <li>Машина не старше 3 лет</li>
-                            <li>Стаж вождения не менее 3 лет</li>
-                            <li>
+                            <li class="hidden">Машина не старше 3 лет</li>
+                            <li class="hidden">Стаж вождения не менее 3 лет</li>
+                            <li class="hidden">
                                 Дивайс на системе андроид 4.0и выше(самсунг)
                             </li>
                         </ul>
@@ -388,12 +398,12 @@
                     <div class="col-md-6 terms_red">
                         ДОКУМЕНТЫ:
                         <ul class="terms_red_list">
-                            <li>Права 2 стороны</li>
-                            <li>Паспорт лицевая сторона</li>
-                            <li>СтС</li>
-                            <li>Лицензия (если есть)</li>
-                            <li>Номер телефона</li>
-                            <li>
+                            <li class="hidden">Права 2 стороны</li>
+                            <li class="hidden">Паспорт лицевая сторона</li>
+                            <li class="hidden">СтС</li>
+                            <li class="hidden">Лицензия (если есть)</li>
+                            <li class="hidden">Номер телефона</li>
+                            <li class="hidden">
                                 Номер карты для перечисления денег (указать в
                                 письме)!
                             </li>
@@ -415,40 +425,40 @@
         </section>
 
         <footer>
-            <div class="media_btns">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            </div>
-            <div class="container">
-                <div class="footer_stick"></div>
-                <div class="row">
-                    <div class="footer_anchors col-md-4 offset-md-4">
+            <div class="footer_stick"></div>
+            <div class="footer_container">
+                <div class="media_btns">
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+
+                <div class="footer_nav">
+                    <div class="footer_anchors">
                         <a href="#">на главную</a>
                         <a href="#">города</a>
                         <a href="#">для водителей</a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="footer_links col-md-4 offset-md-4">
+
+                    <div class="footer_links">
                         <a href="#">центр поддержки</a>
                         <a href="#">вакансии</a>
                         <a href="#">разработчики</a>
                         <a href="#">блог</a>
                         <a href="#">о нас</a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="footer_lang col-md-4 offset-md-4">
+
+                    <div class="footer_lang">
                         <a href="#">русский</a>
                     </div>
                 </div>
-            </div>
-            <div class="footer_download">
-                <a class="footer_download-appstore" href="#"></a>
-                <a class="footer_download-gplay" href="#"></a>
-                <a class="footer_download-winstore" href="#"></a>
+
+                <div class="footer_download">
+                    <a class="footer_download-appstore" href="#"></a>
+                    <a class="footer_download-gplay" href="#"></a>
+                    <a class="footer_download-winstore" href="#"></a>
+                </div>
             </div>
         </footer>
 
