small anchor changes

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             </div>
         </section>
 
-        <section class="terms">
+        <section id="terms" class="terms">
             <div class="section_label section_label-2">возможности</div>
             <div class="section_title">условия и требования</div>
             <div class="container">
@@ -413,7 +413,7 @@
             </div>
         </section>
 
-        <section class="world">
+        <section id="world" class="world">
             <div class="world_map">
                 <div class="section_label section_label-2">города</div>
                 <div class="section_title">По всему миру</div>
@@ -437,8 +437,8 @@
                 <div class="footer_nav">
                     <div class="footer_anchors">
                         <a href="#">на главную</a>
-                        <a href="#">города</a>
-                        <a href="#">для водителей</a>
+                        <a href="#world">города</a>
+                        <a href="#terms">для водителей</a>
                     </div>
 
                     <div class="footer_links">
