--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Uber7</title>
         <link
+            rel="shortcut icon"
+            href="./img/favicon.png"
+            type="image/x-icon"
+        />
+        <link
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap"
             rel="stylesheet"
         />
